fix: Address SonarQube issue
Fixed issues:
- AaAm40_jjks3fvTKTXZe for java:S6881 rule

Generated by SonarQube Agent (task: c3e8c2f7-e82b-4ab1-90c6-f407691ded74)